cp project/force-app/main/default/objects/Unit_Sales_History__c/Unit_Sales_History__c.object-meta.xml
<CustomObject>
    <description>Stores the complete historical record of a Unit sale, including Lead, Opportunity, Booking, Customer, and financial details.</description>
    <label>Unit Sales History</label>
    <nameField>
        <displayFormat>USH-{0000}</displayFormat>
        <label>History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Sales Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>