cp project/force-app/main/default/objects/Unit_Sales_History__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Unit Sales Histories</relationshipLabel>
    <relationshipName>Unit_Sales_Histories_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>