cp project/force-app/main/default/objects/Unit_Sales_History__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unit Sales Histories</relationshipLabel>
    <relationshipName>Unit_Sales_Histories_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>