cp project/force-app/main/default/objects/Unit_Sales_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Unit Sales Histories</relationshipLabel>
    <relationshipName>Unit_Sales_Histories_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>