cp project/force-app/main/default/objects/Unit_Sales_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Unit Sales Histories</relationshipLabel>
    <relationshipName>Unit_Sales_Histories_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>