cp project/force-app/main/default/objects/Unit_Sales_History__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Unit Sales Histories</relationshipLabel>
    <relationshipName>Unit_Sales_Histories_Project</relationshipName>
    <type>Lookup</type>
</CustomField>