cp project/force-app/main/default/objects/Unit_Sales_History__c/fields/Sale_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Closed_Date__c</fullName>
    <label>Sale Closed Date</label>
    <type>Date</type>
</CustomField>