cp project/force-app/main/default/objects/Unit_Sales_History__c/fields/Sale_Status__c.field-meta.xml
<CustomField>
    <fullName>Sale_Status__c</fullName>
    <label>Sale Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
                <default>true</default>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Payment In Progress</fullName>
            </value>
            <value>
                <fullName>Documents Pending</fullName>
            </value>
            <value>
                <fullName>Agreement Pending</fullName>
            </value>
            <value>
                <fullName>Registration Pending</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>